# Automated-Content-Moderation

./: .gitignore  README.md  enviorment.yml  pyproject.toml  requirements.txt  sift.py
notebook/: EDA.ipynb
src/components/: nsfw_extract.py  nsfw_sift.py
src/data/: MMHS150K_nsfw_only.csv  MMHS150K_with_new_nsfw_label.csv  MMHS150K_with_nsfw_label.csv  nsfw_tweets.txt
